--- a/movie_box_application/assets/translations/tr-TR.json
+++ b/movie_box_application/assets/translations/tr-TR.json
@@ -4,5 +4,7 @@
     "continue" :"Devam Et",
     "terms_privacy": "Gizlilik Sözleşmesi Şartları",
     "terms_description":"Bu proje Finansal Bilgi ve Teknolojileri dersi kapsamında yapılmıştır  Verileriniz hiçbir şekilde toplanmamakta ve kullanılmamaktadır",
-    "ok":"Tamam"
+    "ok":"Tamam",
+    "upcoming":"Vizyona Girecek Filmler",
+    "popular" : "Popüler Filmler"
 }
